--- a/world/oath-toolkit/.artixlinux/pkgbase.yaml
+++ b/world/oath-toolkit/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: oath-toolkit
-  version: 2.6.12-1
+  version: 2.6.12-2
   arch:
     - x86_64
   pkgname:
     - oath-toolkit
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 2.6.12-1
+    version: 2.6.12-2
     packages:
-      - oath-toolkit-2.6.12-1-x86_64.pkg.tar.zst
+      - oath-toolkit-2.6.12-2-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
