--- a/world/opensips/.artixlinux/pkgbase.yaml
+++ b/world/opensips/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: opensips
-  version: 3.5.4-1
+  version: 3.5.4-2
   arch:
     - x86_64
   pkgname:
     - opensips
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 3.5.4-1
+    version: 3.5.4-2
     packages:
-      - opensips-3.5.4-1-x86_64.pkg.tar.zst
+      - opensips-3.5.4-2-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
