--- a/world/openslide/.artixlinux/pkgbase.yaml
+++ b/world/openslide/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: openslide
-  version: 4.0.0-4
+  version: 4.0.0-5
   arch:
     - x86_64
   pkgname:
     - openslide
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 4.0.0-4
+    version: 4.0.0-5
     packages:
-      - openslide-4.0.0-4-x86_64.pkg.tar.zst
+      - openslide-4.0.0-5-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
@@ -52,3 +52,4 @@ repos:
   galaxy:
     version: null
     packages: []
+team: world
