--- a/world/osinfo-db-tools/.artixlinux/pkgbase.yaml
+++ b/world/osinfo-db-tools/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: osinfo-db-tools
-  version: 1.12.0-1
+  version: 1.12.0-2
   arch:
     - x86_64
   pkgname:
     - osinfo-db-tools
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 1.12.0-1
+    version: 1.12.0-2
     packages:
-      - osinfo-db-tools-1.12.0-1-x86_64.pkg.tar.zst
+      - osinfo-db-tools-1.12.0-2-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
