--- a/world/pdal/.artixlinux/pkgbase.yaml
+++ b/world/pdal/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: pdal
-  version: 2.8.3-1
+  version: 2.8.3-2
   arch:
     - x86_64
   pkgname:
     - pdal
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 2.8.3-1
+    version: 2.8.3-2
     packages:
-      - pdal-2.8.3-1-x86_64.pkg.tar.zst
+      - pdal-2.8.3-2-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
