--- a/world/podofo/.artixlinux/pkgbase.yaml
+++ b/world/podofo/.artixlinux/pkgbase.yaml
@@ -1,7 +1,7 @@
 ---
 pkgbase:
   name: podofo
-  version: 0.10.3-1
+  version: 0.10.4-2
   arch:
     - x86_64
   pkgname:
@@ -9,11 +9,11 @@ pkgbase:
     - podofo-tools
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -32,10 +32,10 @@ repos:
     version: null
     packages: []
   world:
-    version: 0.10.3-1
+    version: 0.10.4-2
     packages:
-      - podofo-0.10.3-1-x86_64.pkg.tar.zst
-      - podofo-tools-0.10.3-1-x86_64.pkg.tar.zst
+      - podofo-0.10.4-2-x86_64.pkg.tar.zst
+      - podofo-tools-0.10.4-2-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
@@ -54,3 +54,4 @@ repos:
   galaxy:
     version: null
     packages: []
+team: world
