--- a/world/python-certifi/.artixlinux/pkgbase.yaml
+++ b/world/python-certifi/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: python-certifi
-  version: 2025.01.31-1
+  version: 2025.04.26-1
   arch:
     - any
   pkgname:
     - python-certifi
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 2025.01.31-1
+    version: 2025.04.26-1
     packages:
-      - python-certifi-2025.01.31-1-any.pkg.tar.zst
+      - python-certifi-2025.04.26-1-any.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
