--- a/world/python-cfn-lint/.artixlinux/pkgbase.yaml
+++ b/world/python-cfn-lint/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: python-cfn-lint
-  version: 1.33.2-1
+  version: 1.34.2-1
   arch:
     - any
   pkgname:
     - python-cfn-lint
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 1.33.2-1
+    version: 1.34.2-1
     packages:
-      - python-cfn-lint-1.33.2-1-any.pkg.tar.zst
+      - python-cfn-lint-1.34.2-1-any.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
