--- a/world/python-moto/PKGBUILD
+++ b/world/python-moto/PKGBUILD
@@ -1,29 +1,56 @@
-# Maintainer: Chih-Hsuan Yen <yan12125@archlinux.org>
+# Maintainer: Carl Smedstad <carsme@archlinux.org>
+# Contributor: Chih-Hsuan Yen <yan12125@archlinux.org>
 # Contributor: Guillaume Horel <guillaume.horel@gmail.com>
 
 pkgname=python-moto
-_pkgname=moto
-# https://github.com/getmoto/moto/blob/master/CHANGELOG.md
-pkgver=5.1.3
+pkgver=5.1.4
 pkgrel=1
 pkgdesc='Moto is a library to mock out the boto library.'
 arch=(any)
 url='https://github.com/spulec/moto'
-# https://github.com/getmoto/moto/blob/4.2.13/setup.cfg#L9
 license=('Apache-2.0')
-# NOTE: Keep the order of dependencies matching setup.cfg
-# setup.cfg includes setuptools, which is a work around for missing dependencies in aws-xray-sdk [1].
-# I use the correct dependency in python-aws-xray-sdk, so python-setuptools is not needed here.
-# [1] https://github.com/spulec/moto/pull/4142
-depends=(python python-boto3 python-botocore python-cryptography python-requests python-xmltodict
-         python-werkzeug python-dateutil python-responses
-         python-jinja
-         # urllib3 is used by cfnresponse.py, not directly by moto - just to make namcap happy
-         python-urllib3)
-makedepends=(git python-build python-installer python-setuptools python-wheel)
-# See requirements-tests.txt, excluding pytest-cov
-checkdepends=(python-pytest python-pytest-order python-freezegun)
-# Check extras_require in upstream `setup.cfg` for optional dependencies.
+depends=(
+  python
+  python-boto3
+  python-botocore
+  python-cryptography
+  python-dateutil
+  python-jinja
+  python-requests
+  python-responses
+  python-urllib3
+  python-werkzeug
+  python-xmltodict
+)
+makedepends=(
+  git
+  python-build
+  python-installer
+  python-setuptools
+  python-wheel
+)
+checkdepends=(
+  python-antlr4
+  python-aws-xray-sdk
+  python-cfn-lint
+  python-crc32c
+  python-docker
+  python-flask
+  python-flask-cors
+  python-freezegun
+  python-graphql-core
+  python-joserfc
+  python-jsondiff
+  python-jsonpath-ng
+  python-jsonschema
+  python-multipart
+  python-openapi-spec-validator
+  python-py-partiql-parser
+  python-pyparsing
+  python-pytest
+  python-pytest-order
+  python-yaml
+)
 optdepends=(
   'python-yaml: for apigatewayv2, cloudformation, s3 and ssm'
   'python-joserfc: for apigateway, cloudformation and cognitoidp'
@@ -45,37 +72,27 @@ optdepends=(
   'python-jsonpath-ng: for events, stepfunctions'
   'python-jsonschema: for quicksight'
 )
-checkdepends+=(python-yaml python-joserfc python-openapi-spec-validator python-docker
-               python-graphql-core python-jsondiff python-aws-xray-sdk
-               python-cfn-lint python-pyparsing python-py-partiql-parser
-               python-crc32c
-               python-flask python-flask-cors python-multipart
-               python-antlr4 python-jsonpath-ng python-jsonschema
+source=(
+  "git+https://github.com/getmoto/moto#tag=$pkgver"
+  "fix-tests.diff"
 )
-source=("git+https://github.com/getmoto/moto#tag=$pkgver"
-        "fix-tests.diff")
-sha256sums=('54b03453fe2c2d08f794cf0a03e9242112b339431da4db99c00105e413a95bd6'
+sha256sums=('6d5ef52463cf54f4c1d372324f6c28657f6cbfb8cf7d834897e18fae31d2509c'
             '21305cdf3d650ced1acb1d0f7dde8760b26e32a94c56a5571e798d6b6976cf5a')
 
 prepare() {
-  cd $_pkgname
-
+  cd ${pkgname#python-}
   patch -Np1 -i ../fix-tests.diff
+
+  python update_version_from_git.py $pkgver
 }
 
 build() {
-  cd $_pkgname
-
-  # Update versions in setup.cfg and moto/__init__.py, following upstream release pipeline
-  # https://github.com/getmoto/moto/blob/master/.github/workflows/release.yml
-  python update_version_from_git.py $pkgver
-
+  cd ${pkgname#python-}
   python -m build --wheel --no-isolation
 }
 
 check() {
-  cd $_pkgname
-
+  cd ${pkgname#python-}
   local pytest_args=(
     # Needs a new package python-pycognito
     --ignore tests/test_cognitoidp/test_cognitoidp.py
@@ -89,7 +106,6 @@ check() {
 }
 
 package() {
-  cd $_pkgname
-
+  cd ${pkgname#python-}
   python -m installer --destdir="$pkgdir" dist/*.whl
 }
