--- a/world/python-nethsm-sdk-py/.artixlinux/pkgbase.yaml
+++ b/world/python-nethsm-sdk-py/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: python-nethsm-sdk-py
-  version: 1.3.0-1
+  version: 1.4.0-1
   arch:
     - any
   pkgname:
     - python-nethsm-sdk-py
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 1.3.0-1
+    version: 1.4.0-1
     packages:
-      - python-nethsm-sdk-py-1.3.0-1-any.pkg.tar.zst
+      - python-nethsm-sdk-py-1.4.0-1-any.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
