--- a/world/python-s3transfer/.artixlinux/pkgbase.yaml
+++ b/world/python-s3transfer/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: python-s3transfer
-  version: 0.11.3-1
+  version: 0.12.0-1
   arch:
     - any
   pkgname:
     - python-s3transfer
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 0.11.3-1
+    version: 0.12.0-1
     packages:
-      - python-s3transfer-0.11.3-1-any.pkg.tar.zst
+      - python-s3transfer-0.12.0-1-any.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
