--- a/world/ruby-nokogiri/.artixlinux/pkgbase.yaml
+++ b/world/ruby-nokogiri/.artixlinux/pkgbase.yaml
@@ -25,16 +25,15 @@ repos:
     version: null
     packages: []
   world-goblins:
-    version: 1.18.3-4
-    packages:
-      - ruby-nokogiri-1.18.3-4-x86_64.pkg.tar.zst
+    version: null
+    packages: []
   world-gremlins:
     version: null
     packages: []
   world:
-    version: 1.18.3-3
+    version: 1.18.3-4
     packages:
-      - ruby-nokogiri-1.18.3-3-x86_64.pkg.tar.zst
+      - ruby-nokogiri-1.18.3-4-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
