--- a/world/rygel/.artixlinux/pkgbase.yaml
+++ b/world/rygel/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: rygel
-  version: 1:0.44.2-1
+  version: 1:0.44.2-3
   arch:
     - x86_64
   pkgname:
     - rygel
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 1:0.44.2-1
+    version: 1:0.44.2-3
     packages:
-      - rygel-1:0.44.2-1-x86_64.pkg.tar.zst
+      - rygel-1:0.44.2-3-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
