--- a/world/s3fs-fuse/.artixlinux/pkgbase.yaml
+++ b/world/s3fs-fuse/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: s3fs-fuse
-  version: 1.93-1
+  version: 1.93-2
   arch:
     - x86_64
   pkgname:
     - s3fs-fuse
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 1.93-1
+    version: 1.93-2
     packages:
-      - s3fs-fuse-1.93-1-x86_64.pkg.tar.zst
+      - s3fs-fuse-1.93-2-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
@@ -52,3 +52,4 @@ repos:
   galaxy:
     version: null
     packages: []
+team: world
