--- a/world/sane/.artixlinux/pkgbase.yaml
+++ b/world/sane/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: sane
-  version: 1.3.1-2
+  version: 1.3.1-3
   arch:
     - x86_64
   pkgname:
     - sane
 actions:
-  addRepo: world-goblins
-  removeRepo: null
-  triggersBuild: true
+  addRepo: world
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -25,16 +25,15 @@ repos:
     version: null
     packages: []
   world-goblins:
-    version: 1.3.1-2
-    packages:
-      - sane-1.3.1-2-x86_64.pkg.tar.zst
+    version: null
+    packages: []
   world-gremlins:
     version: null
     packages: []
   world:
-    version: 1.3.1-2
+    version: 1.3.1-3
     packages:
-      - sane-1.3.1-2-x86_64.pkg.tar.zst
+      - sane-1.3.1-3-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
