--- a/world/snapper/.artixlinux/pkgbase.yaml
+++ b/world/snapper/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: snapper
-  version: 0.12.2-1
+  version: 0.12.2-3
   arch:
     - x86_64
   pkgname:
     - snapper
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -25,16 +25,15 @@ repos:
     version: null
     packages: []
   world-goblins:
-    version: 0.12.2-3
-    packages:
-      - snapper-0.12.2-3-x86_64.pkg.tar.zst
+    version: null
+    packages: []
   world-gremlins:
     version: null
     packages: []
   world:
-    version: 0.12.2-1
+    version: 0.12.2-3
     packages:
-      - snapper-0.12.2-1-x86_64.pkg.tar.zst
+      - snapper-0.12.2-3-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
