--- a/world/stoken/.artixlinux/pkgbase.yaml
+++ b/world/stoken/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: stoken
-  version: 0.92-4.1
+  version: 0.92-5.1
   arch:
     - x86_64
   pkgname:
     - stoken
 actions:
-  addRepo: null
-  removeRepo: null
+  addRepo: world
+  removeRepo: world-gremlins
   triggersBuild: false
   triggersRebuild: false
-  triggersRepoAdd: false
-  triggersRepoRemove: false
+  triggersRepoAdd: true
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 0.92-4.1
+    version: 0.92-5.1
     packages:
-      - stoken-0.92-4.1-x86_64.pkg.tar.zst
+      - stoken-0.92-5.1-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
@@ -52,3 +52,4 @@ repos:
   galaxy:
     version: null
     packages: []
+team: world
