--- a/world/telepathy-logger/.artixlinux/pkgbase.yaml
+++ b/world/telepathy-logger/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: telepathy-logger
-  version: 0.8.2-7
+  version: 0.8.2-8
   arch:
     - x86_64
   pkgname:
     - telepathy-logger
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 0.8.2-7
+    version: 0.8.2-8
     packages:
-      - telepathy-logger-0.8.2-7-x86_64.pkg.tar.zst
+      - telepathy-logger-0.8.2-8-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
