--- a/world/thermald/.artixlinux/pkgbase.yaml
+++ b/world/thermald/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: thermald
-  version: 2.5.9-1
+  version: 2.5.9-2
   arch:
     - x86_64
   pkgname:
     - thermald
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 2.5.9-1
+    version: 2.5.9-2
     packages:
-      - thermald-2.5.9-1-x86_64.pkg.tar.zst
+      - thermald-2.5.9-2-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
