--- a/world/tinysparql/.artixlinux/pkgbase.yaml
+++ b/world/tinysparql/.artixlinux/pkgbase.yaml
@@ -2,7 +2,7 @@
 team: world
 pkgbase:
   name: tinysparql
-  version: 3.9.2-1
+  version: 3.9.2-2
   arch:
     - x86_64
   pkgname:
@@ -10,11 +10,11 @@ pkgbase:
     - tinysparql-docs
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -33,10 +33,10 @@ repos:
     version: null
     packages: []
   world:
-    version: 3.9.2-1
+    version: 3.9.2-2
     packages:
-      - tinysparql-3.9.2-1-x86_64.pkg.tar.zst
-      - tinysparql-docs-3.9.2-1-x86_64.pkg.tar.zst
+      - tinysparql-3.9.2-2-x86_64.pkg.tar.zst
+      - tinysparql-docs-3.9.2-2-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
