Updated totem-pl-parser - 3.26.6+r30+g51b8439-2

--- a/world/totem-pl-parser/.artixlinux/pkgbase.yaml
+++ b/world/totem-pl-parser/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: totem-pl-parser
-  version: 3.26.6+r30+g51b8439-1
+  version: 3.26.6+r30+g51b8439-2
   arch:
     - x86_64
   pkgname:
     - totem-pl-parser
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 3.26.6+r30+g51b8439-1
+    version: 3.26.6+r30+g51b8439-2
     packages:
-      - totem-pl-parser-3.26.6+r30+g51b8439-1-x86_64.pkg.tar.zst
+      - totem-pl-parser-3.26.6+r30+g51b8439-2-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
