--- a/world/vcdimager/.artixlinux/pkgbase.yaml
+++ b/world/vcdimager/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: vcdimager
-  version: 2.0.1-5
+  version: 2.0.1-7
   arch:
     - x86_64
   pkgname:
     - vcdimager
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 2.0.1-5
+    version: 2.0.1-7
     packages:
-      - vcdimager-2.0.1-5-x86_64.pkg.tar.zst
+      - vcdimager-2.0.1-7-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
