--- a/world/wireshark/.artixlinux/pkgbase.yaml
+++ b/world/wireshark/.artixlinux/pkgbase.yaml
@@ -1,7 +1,7 @@
 ---
 pkgbase:
   name: wireshark
-  version: 4.4.6-1
+  version: 4.4.6-2
   arch:
     - x86_64
   pkgname:
@@ -9,11 +9,11 @@ pkgbase:
     - wireshark-qt
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -32,10 +32,10 @@ repos:
     version: null
     packages: []
   world:
-    version: 4.4.6-1
+    version: 4.4.6-2
     packages:
-      - wireshark-cli-4.4.6-1-x86_64.pkg.tar.zst
-      - wireshark-qt-4.4.6-1-x86_64.pkg.tar.zst
+      - wireshark-cli-4.4.6-2-x86_64.pkg.tar.zst
+      - wireshark-qt-4.4.6-2-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
