--- a/world/xmms2/.artixlinux/pkgbase.yaml
+++ b/world/xmms2/.artixlinux/pkgbase.yaml
@@ -1,14 +1,14 @@
 ---
 pkgbase:
   name: xmms2
-  version: 0.9.5-1
+  version: 0.9.5-4
   arch:
     - x86_64
   pkgname:
     - xmms2
 actions:
   addRepo: world
-  removeRepo: world-goblins
+  removeRepo: world-gremlins
   triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 0.9.5-1
+    version: 0.9.5-4
     packages:
-      - xmms2-0.9.5-1-x86_64.pkg.tar.zst
+      - xmms2-0.9.5-4-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
