--- a/world/xscreensaver/.artixlinux/pkgbase.yaml
+++ b/world/xscreensaver/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: xscreensaver
-  version: 6.09-1
+  version: 6.09-2
   arch:
     - x86_64
   pkgname:
     - xscreensaver
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 6.09-1
+    version: 6.09-2
     packages:
-      - xscreensaver-6.09-1-x86_64.pkg.tar.zst
+      - xscreensaver-6.09-2-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
