Updated lib32-libelf - 0.193-1

--- a/lib32/lib32-libelf/.artixlinux/pkgbase.yaml
+++ b/lib32/lib32-libelf/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: lib32-libelf
-  version: 0.192-2
+  version: 0.193-1
   arch:
     - x86_64
   pkgname:
     - lib32-libelf
 actions:
   addRepo: lib32
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: lib32-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -40,9 +40,9 @@ repos:
     version: null
     packages: []
   lib32:
-    version: 0.192-2
+    version: 0.193-1
     packages:
-      - lib32-libelf-0.192-2-x86_64.pkg.tar.zst
+      - lib32-libelf-0.193-1-x86_64.pkg.tar.zst
   galaxy-goblins:
     version: null
     packages: []
