--- a/lib32/lib32-libsoup/.artixlinux/pkgbase.yaml
+++ b/lib32/lib32-libsoup/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: lib32-libsoup
-  version: 2.74.3-2
+  version: 2.74.3-3
   arch:
     - x86_64
   pkgname:
     - lib32-libsoup
 actions:
   addRepo: lib32
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: lib32-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -40,9 +40,9 @@ repos:
     version: null
     packages: []
   lib32:
-    version: 2.74.3-2
+    version: 2.74.3-3
     packages:
-      - lib32-libsoup-2.74.3-2-x86_64.pkg.tar.zst
+      - lib32-libsoup-2.74.3-3-x86_64.pkg.tar.zst
   galaxy-goblins:
     version: null
     packages: []
