Updated lib32-libxml2 - 2.14.2-2

--- a/lib32/lib32-libxml2/PKGBUILD
+++ b/lib32/lib32-libxml2/PKGBUILD
@@ -8,8 +8,8 @@ pkgbase=lib32-libxml2
 pkgname=(
   lib32-libxml2
 )
-pkgver=2.13.7
-pkgrel=1
+pkgver=2.14.2
+pkgrel=2
 pkgdesc="XML C parser and toolkit (32-bit)"
 url="https://gitlab.gnome.org/GNOME/libxml2/-/wikis/home"
 arch=(x86_64)
@@ -23,35 +23,36 @@ depends=(
 )
 makedepends=(
   git
+  lib32-readline
   meson
   python
 )
 source=(
   "git+https://gitlab.gnome.org/GNOME/libxml2.git#tag=v$pkgver"
   https://www.w3.org/XML/Test/xmlts20130923.tar.gz
-  0002-meson-Build-fixes.patch
 )
-b2sums=('fc6186c28db0582fc52a0247e2a333c7030a62005efa6b98eb982acd78a28fc8bf2a542b340f86549cb6ac724d2f9fc94d4d8fdce374847fef61dcadd80132a2'
-        '63a47bc69278ef510cd0b3779aed729e1b309e30efa0015d28ed051cc03f9dfddb447ab57b07b3393e8f47393d15473b0e199c34cb1f5f746b15ddfaa55670be'
-        'a42e284cd50e87a6eb4bd66bc02f968fc9f79922e000295d9778c5f2974985251509d58214203e9f542bad365e85136f7f07672bd4b6e338e89b0bd9b14190f1')
+b2sums=('711b2e11d09bba7d0c17237bdbf951208469ae910c47e8875ef17b03196d8e96595e831849c05c141d708418b8ec2dbe3957365623db25151ee2ca48bc68ce11'
+        '63a47bc69278ef510cd0b3779aed729e1b309e30efa0015d28ed051cc03f9dfddb447ab57b07b3393e8f47393d15473b0e199c34cb1f5f746b15ddfaa55670be')
 
 prepare() {
   cd libxml2
 
+  # Unbreak xmlstarlet tests
+  git cherry-pick -n f34529641978c47ebd778d0e744acd12b3d9a906
+
+  # Unbreak PostgreSQL tests
+  git cherry-pick -n ae299377feff868272693ec4322b9dbfef2f571b
+
   # Use xmlconf from conformance test suite
   ln -s ../xmlconf
-
-  # Meson fixes
-  git apply -3 ../0002-meson-Build-fixes.patch
 }
 
 build() {
   local meson_options=(
     --cross-file lib32
-    -D history=false
-    -D http=true
-    -D legacy=true
-    -D python=false
+    -D icu=enabled
+    -D legacy=enabled
+    -D python=disabled
   )
 
   artix-meson libxml2 build "${meson_options[@]}"
