--- a/galaxy/labwc/.artixlinux/pkgbase.yaml
+++ b/galaxy/labwc/.artixlinux/pkgbase.yaml
@@ -2,18 +2,18 @@
 team: galaxy
 pkgbase:
   name: labwc
-  version: 0.8.3-1
+  version: 0.8.3-2
   arch:
     - x86_64
   pkgname:
     - labwc
 actions:
   addRepo: galaxy
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: galaxy-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -50,6 +50,6 @@ repos:
     version: null
     packages: []
   galaxy:
-    version: 0.8.3-1
+    version: 0.8.3-2
     packages:
-      - labwc-0.8.3-1-x86_64.pkg.tar.zst
+      - labwc-0.8.3-2-x86_64.pkg.tar.zst
