Updated gcc - 15.1.1+r7+gf36ec88aa85a-1

--- a/system/gcc/.artixlinux/pkgbase.yaml
+++ b/system/gcc/.artixlinux/pkgbase.yaml
@@ -1,7 +1,7 @@
 ---
 pkgbase:
   name: gcc
-  version: 14.2.1+r753+g1cd744a6828f-1
+  version: 15.1.1+r7+gf36ec88aa85a-1
   arch:
     - x86_64
   pkgname:
@@ -15,6 +15,7 @@ pkgbase:
     - gcc-m2
     - gcc-objc
     - gcc-rust
+    - gcc-gcobol
     - lto-dump
     - libgccjit
 actions:
@@ -33,20 +34,21 @@ repos:
     version: null
     packages: []
   system:
-    version: 14.2.1+r753+g1cd744a6828f-1
+    version: 15.1.1+r7+gf36ec88aa85a-1
     packages:
-      - gcc-14.2.1+r753+g1cd744a6828f-1-x86_64.pkg.tar.zst
-      - gcc-libs-14.2.1+r753+g1cd744a6828f-1-x86_64.pkg.tar.zst
-      - lib32-gcc-libs-14.2.1+r753+g1cd744a6828f-1-x86_64.pkg.tar.zst
-      - gcc-ada-14.2.1+r753+g1cd744a6828f-1-x86_64.pkg.tar.zst
-      - gcc-d-14.2.1+r753+g1cd744a6828f-1-x86_64.pkg.tar.zst
-      - gcc-fortran-14.2.1+r753+g1cd744a6828f-1-x86_64.pkg.tar.zst
-      - gcc-go-14.2.1+r753+g1cd744a6828f-1-x86_64.pkg.tar.zst
-      - gcc-m2-14.2.1+r753+g1cd744a6828f-1-x86_64.pkg.tar.zst
-      - gcc-objc-14.2.1+r753+g1cd744a6828f-1-x86_64.pkg.tar.zst
-      - gcc-rust-14.2.1+r753+g1cd744a6828f-1-x86_64.pkg.tar.zst
-      - lto-dump-14.2.1+r753+g1cd744a6828f-1-x86_64.pkg.tar.zst
-      - libgccjit-14.2.1+r753+g1cd744a6828f-1-x86_64.pkg.tar.zst
+      - gcc-15.1.1+r7+gf36ec88aa85a-1-x86_64.pkg.tar.zst
+      - gcc-libs-15.1.1+r7+gf36ec88aa85a-1-x86_64.pkg.tar.zst
+      - lib32-gcc-libs-15.1.1+r7+gf36ec88aa85a-1-x86_64.pkg.tar.zst
+      - gcc-ada-15.1.1+r7+gf36ec88aa85a-1-x86_64.pkg.tar.zst
+      - gcc-d-15.1.1+r7+gf36ec88aa85a-1-x86_64.pkg.tar.zst
+      - gcc-fortran-15.1.1+r7+gf36ec88aa85a-1-x86_64.pkg.tar.zst
+      - gcc-go-15.1.1+r7+gf36ec88aa85a-1-x86_64.pkg.tar.zst
+      - gcc-m2-15.1.1+r7+gf36ec88aa85a-1-x86_64.pkg.tar.zst
+      - gcc-objc-15.1.1+r7+gf36ec88aa85a-1-x86_64.pkg.tar.zst
+      - gcc-rust-15.1.1+r7+gf36ec88aa85a-1-x86_64.pkg.tar.zst
+      - gcc-gcobol-15.1.1+r7+gf36ec88aa85a-1-x86_64.pkg.tar.zst
+      - lto-dump-15.1.1+r7+gf36ec88aa85a-1-x86_64.pkg.tar.zst
+      - libgccjit-15.1.1+r7+gf36ec88aa85a-1-x86_64.pkg.tar.zst
   world-goblins:
     version: null
     packages: []
