--- a/system/glibc/.artixlinux/pkgbase.yaml
+++ b/system/glibc/.artixlinux/pkgbase.yaml
@@ -1,7 +1,7 @@
 ---
 pkgbase:
   name: glibc
-  version: 2.41+r47+g046b33800c3e-1
+  version: 2.41+r48+g5cb575ca9a3d-1
   arch:
     - x86_64
   pkgname:
@@ -24,11 +24,11 @@ repos:
     version: null
     packages: []
   system:
-    version: 2.41+r47+g046b33800c3e-1
+    version: 2.41+r48+g5cb575ca9a3d-1
     packages:
-      - glibc-2.41+r47+g046b33800c3e-1-x86_64.pkg.tar.zst
-      - lib32-glibc-2.41+r47+g046b33800c3e-1-x86_64.pkg.tar.zst
-      - glibc-locales-2.41+r47+g046b33800c3e-1-x86_64.pkg.tar.zst
+      - glibc-2.41+r48+g5cb575ca9a3d-1-x86_64.pkg.tar.zst
+      - lib32-glibc-2.41+r48+g5cb575ca9a3d-1-x86_64.pkg.tar.zst
+      - glibc-locales-2.41+r48+g5cb575ca9a3d-1-x86_64.pkg.tar.zst
   world-goblins:
     version: null
     packages: []
