--- a/world/appstream/.artixlinux/pkgbase.yaml
+++ b/world/appstream/.artixlinux/pkgbase.yaml
@@ -1,7 +1,7 @@
 ---
 pkgbase:
   name: appstream
-  version: 1.0.5-1
+  version: 1.0.5-2
   arch:
     - x86_64
   pkgname:
@@ -10,11 +10,11 @@ pkgbase:
     - appstream-qt
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -27,20 +27,17 @@ repos:
     version: null
     packages: []
   world-goblins:
-    version: 1.0.4-2
-    packages:
-      - appstream-1.0.4-2-x86_64.pkg.tar.zst
-      - appstream-qt5-1.0.4-2-x86_64.pkg.tar.zst
-      - appstream-qt-1.0.4-2-x86_64.pkg.tar.zst
+    version: null
+    packages: []
   world-gremlins:
     version: null
     packages: []
   world:
-    version: 1.0.5-1
+    version: 1.0.5-2
     packages:
-      - appstream-1.0.5-1-x86_64.pkg.tar.zst
-      - appstream-qt5-1.0.5-1-x86_64.pkg.tar.zst
-      - appstream-qt-1.0.5-1-x86_64.pkg.tar.zst
+      - appstream-1.0.5-2-x86_64.pkg.tar.zst
+      - appstream-qt5-1.0.5-2-x86_64.pkg.tar.zst
+      - appstream-qt-1.0.5-2-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
