--- a/world/ardour/.artixlinux/pkgbase.yaml
+++ b/world/ardour/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: ardour
-  version: 8.12-1
+  version: 8.12-2
   arch:
     - x86_64
   pkgname:
     - ardour
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 8.12-1
+    version: 8.12-2
     packages:
-      - ardour-8.12-1-x86_64.pkg.tar.zst
+      - ardour-8.12-2-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
