--- a/world/armagetronad/.artixlinux/pkgbase.yaml
+++ b/world/armagetronad/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: armagetronad
-  version: 0.2.9.2.3-2
+  version: 0.2.9.2.3-3
   arch:
     - x86_64
   pkgname:
     - armagetronad
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 0.2.9.2.3-2
+    version: 0.2.9.2.3-3
     packages:
-      - armagetronad-0.2.9.2.3-2-x86_64.pkg.tar.zst
+      - armagetronad-0.2.9.2.3-3-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
