--- a/world/autogen/.artixlinux/pkgbase.yaml
+++ b/world/autogen/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: autogen
-  version: 5.18.16-5
+  version: 5.18.16-6
   arch:
     - x86_64
   pkgname:
     - autogen
 actions:
-  addRepo: null
-  removeRepo: null
+  addRepo: world
+  removeRepo: world-gremlins
   triggersBuild: false
   triggersRebuild: false
-  triggersRepoAdd: false
-  triggersRepoRemove: false
+  triggersRepoAdd: true
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 5.18.16-5
+    version: 5.18.16-6
     packages:
-      - autogen-5.18.16-5-x86_64.pkg.tar.zst
+      - autogen-5.18.16-6-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
@@ -52,3 +52,4 @@ repos:
   galaxy:
     version: null
     packages: []
+team: world
