--- a/world/cantor/.artixlinux/pkgbase.yaml
+++ b/world/cantor/.artixlinux/pkgbase.yaml
@@ -1,7 +1,7 @@
 ---
 pkgbase:
   name: cantor
-  version: 25.04.0-1
+  version: 25.04.0-3
   arch:
     - x86_64
   pkgname:
@@ -25,16 +25,15 @@ repos:
     version: null
     packages: []
   world-goblins:
-    version: 24.08.3-2
-    packages:
-      - cantor-24.08.3-2-x86_64.pkg.tar.zst
+    version: null
+    packages: []
   world-gremlins:
     version: null
     packages: []
   world:
-    version: 25.04.0-1
+    version: 25.04.0-3
     packages:
-      - cantor-25.04.0-1-x86_64.pkg.tar.zst
+      - cantor-25.04.0-3-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
