Updated gtksourceview3 - 1:3.24.11+r30+gd880929f-1

--- a/world/gtksourceview3/.artixlinux/pkgbase.yaml
+++ b/world/gtksourceview3/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: gtksourceview3
-  version: 1:3.24.11+r28+g73e57b57-2
+  version: 1:3.24.11+r30+gd880929f-1
   arch:
     - x86_64
   pkgname:
     - gtksourceview3
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 1:3.24.11+r28+g73e57b57-2
+    version: 1:3.24.11+r30+gd880929f-1
     packages:
-      - gtksourceview3-1:3.24.11+r28+g73e57b57-2-x86_64.pkg.tar.zst
+      - gtksourceview3-1:3.24.11+r30+gd880929f-1-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
