--- a/world/libakonadi5/.artixlinux/pkgbase.yaml
+++ b/world/libakonadi5/.artixlinux/pkgbase.yaml
@@ -1,7 +1,7 @@
 ---
 pkgbase:
   name: libakonadi5
-  version: 23.08.5-2
+  version: 23.08.5-3
   arch:
     - x86_64
   pkgname:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 23.08.5-2
+    version: 23.08.5-3
     packages:
-      - libakonadi5-23.08.5-2-x86_64.pkg.tar.zst
+      - libakonadi5-23.08.5-3-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
@@ -52,3 +52,4 @@ repos:
   galaxy:
     version: null
     packages: []
+team: world
