--- a/world/libakonadi5/PKGBUILD
+++ b/world/libakonadi5/PKGBUILD
@@ -1,13 +1,12 @@
-# Maintainer: Cory Sanin <corysanin@artixlinux.org>
-# Contributor: Antonio Rojas <arojas@archlinux.org>
-# Contributor: Felix Yan <felixonmars@archlinux.org>
+# Maintainer: Antonio Rojas <arojas@archlinux.org>
+# Maintainer: Felix Yan <felixonmars@archlinux.org>
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 # Contributor: Pierre Schmitz <pierre@archlinux.de>
 
 _name=akonadi
 pkgname=libakonadi5
 pkgver=23.08.5
-pkgrel=2
+pkgrel=3
 pkgdesc='Libraries used by applications based on Akonadi'
 arch=(x86_64)
 url='https://kontact.kde.org'
