--- a/galaxy/cinnamon/.artixlinux/pkgbase.yaml
+++ b/galaxy/cinnamon/.artixlinux/pkgbase.yaml
@@ -1,7 +1,7 @@
 ---
 pkgbase:
   name: cinnamon
-  version: 6.4.9-1
+  version: 6.4.10-1.2
   arch:
     - x86_64
   pkgname:
@@ -43,13 +43,15 @@ repos:
     version: null
     packages: []
   galaxy-goblins:
-    version: null
-    packages: []
-  galaxy-gremlins:
-    version: null
-    packages: []
-  galaxy:
-    version: 6.4.9-1
+    version: 6.4.10-1.1
     packages:
-      - cinnamon-6.4.9-1-x86_64.pkg.tar.zst
+      - cinnamon-6.4.10-1.1-x86_64.pkg.tar.zst
+  galaxy-gremlins:
+    version: 6.4.10-1
+    packages:
+      - cinnamon-6.4.10-1-x86_64.pkg.tar.zst
+  galaxy:
+    version: 6.4.10-1.2
+    packages:
+      - cinnamon-6.4.10-1.2-x86_64.pkg.tar.zst
 team: galaxy
