Updated mate-applets - 1.28.1-2.1

--- a/galaxy/mate-applets/.artixlinux/pkgbase.yaml
+++ b/galaxy/mate-applets/.artixlinux/pkgbase.yaml
@@ -1,7 +1,7 @@
 ---
 pkgbase:
   name: mate-applets
-  version: 1.28.1-1
+  version: 1.28.1-2.1
   arch:
     - x86_64
   pkgname:
@@ -46,10 +46,11 @@ repos:
     version: null
     packages: []
   galaxy-gremlins:
-    version: null
-    packages: []
-  galaxy:
-    version: 1.28.1-1
+    version: 1.28.1-2
     packages:
-      - mate-applets-1.28.1-1-x86_64.pkg.tar.zst
+      - mate-applets-1.28.1-2-x86_64.pkg.tar.zst
+  galaxy:
+    version: 1.28.1-2.1
+    packages:
+      - mate-applets-1.28.1-2.1-x86_64.pkg.tar.zst
 team: galaxy
