--- a/galaxy/pluma/.artixlinux/pkgbase.yaml
+++ b/galaxy/pluma/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: pluma
-  version: 1.28.0-5
+  version: 1.28.0-6.1
   arch:
     - x86_64
   pkgname:
     - pluma
 actions:
   addRepo: galaxy
-  removeRepo: galaxy-gremlins
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -46,10 +46,11 @@ repos:
     version: null
     packages: []
   galaxy-gremlins:
-    version: null
-    packages: []
-  galaxy:
-    version: 1.28.0-5
+    version: 1.28.0-6
     packages:
-      - pluma-1.28.0-5-x86_64.pkg.tar.zst
+      - pluma-1.28.0-6-x86_64.pkg.tar.zst
+  galaxy:
+    version: 1.28.0-6.1
+    packages:
+      - pluma-1.28.0-6.1-x86_64.pkg.tar.zst
 team: galaxy
