--- a/galaxy/0ad/PKGBUILD
+++ b/galaxy/0ad/PKGBUILD
@@ -1,11 +1,10 @@
-# Maintainer: Cory Sanin <corysanin@artixlinux.org>
-# Contributor: Sven-Hendrik Haase <svenstaro@archlinux.org>
+# Maintainer: Sven-Hendrik Haase <svenstaro@archlinux.org>
 # Contributor: t3ddy  <t3ddy1988 "at" gmail {dot} com>
 # Contributor: Adrián Chaves Fernández (Gallaecio) <adriyetichaves@gmail.com>
 pkgname=0ad
 pkgver=a27
 _pkgver=0.27.0
-pkgrel=4
+pkgrel=7
 pkgdesc="Cross-platform, 3D and historically-based real-time strategy game"
 arch=('x86_64')
 url="http://play0ad.com/"
@@ -13,7 +12,7 @@ license=('GPL-2.0-or-later' 'CCPL')
 depends=('0ad-data' 'binutils' 'boost-libs' 'curl' 'enet' 'libogg' 'libpng' 'libvorbis'
          'libxml2' 'openal' 'sdl2' 'wxwidgets-gtk3' 'zlib' 'libgl' 'glu' 'fmt'
          'gloox' 'miniupnpc' 'libminiupnpc.so' 'icu' 'nspr' 'libsodium' 'which')
-makedepends=('boost' 'cmake' 'mesa' 'zip' 'libsm' 'rust' 'git' 'premake' 'python' 'llvm')
+makedepends=('boost' 'cmake' 'mesa' 'zip' 'libsm' 'rust' 'git' 'python' 'llvm')
 options=('!lto') # breaks spidermonkey linking (https://bugs.gentoo.org/746947)
 source=("https://releases.wildfiregames.com/$pkgname-$_pkgver-unix-build.tar.xz"
         0ad-fix-missing-includes.patch)
@@ -30,14 +29,16 @@ prepare() {
 build() {
   cd "$pkgname-$_pkgver"
 
+  export CMAKE_POLICY_VERSION_MINIMUM=3.5
   cd libraries
   ./build-source-libs.sh
   cd ../build/workspaces
 
+  # Currently broken:
+  # --with-system-premake5 \
   ./update-workspaces.sh -j$(nproc) \
       --with-lto \
       --without-pch \
-      --with-system-premake5 \
       --bindir=/usr/bin \
       --libdir=/usr/lib/0ad \
       --datadir=/usr/share/0ad/data
