--- a/world/marble/.artixlinux/pkgbase.yaml
+++ b/world/marble/.artixlinux/pkgbase.yaml
@@ -1,7 +1,7 @@
 ---
 pkgbase:
   name: marble
-  version: 25.04.0-1
+  version: 25.04.0-2
   arch:
     - x86_64
   pkgname:
@@ -12,11 +12,11 @@ pkgbase:
     - marble-qt
 actions:
   addRepo: world
-  removeRepo: world-gremlins
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -35,13 +35,13 @@ repos:
     version: null
     packages: []
   world:
-    version: 25.04.0-1
+    version: 25.04.0-2
     packages:
-      - marble-25.04.0-1-x86_64.pkg.tar.zst
-      - marble-behaim-25.04.0-1-x86_64.pkg.tar.zst
-      - marble-common-25.04.0-1-x86_64.pkg.tar.zst
-      - marble-maps-25.04.0-1-x86_64.pkg.tar.zst
-      - marble-qt-25.04.0-1-x86_64.pkg.tar.zst
+      - marble-25.04.0-2-x86_64.pkg.tar.zst
+      - marble-behaim-25.04.0-2-x86_64.pkg.tar.zst
+      - marble-common-25.04.0-2-x86_64.pkg.tar.zst
+      - marble-maps-25.04.0-2-x86_64.pkg.tar.zst
+      - marble-qt-25.04.0-2-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
