--- a/world/kitinerary/.artixlinux/pkgbase.yaml
+++ b/world/kitinerary/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: kitinerary
-  version: 25.04.0-2
+  version: 25.04.0-3
   arch:
     - x86_64
   pkgname:
     - kitinerary
 actions:
   addRepo: world
-  removeRepo: world-gremlins
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 25.04.0-2
+    version: 25.04.0-3
     packages:
-      - kitinerary-25.04.0-2-x86_64.pkg.tar.zst
+      - kitinerary-25.04.0-3-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
